docs/7.52/md/abennews-70-docu.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Release 7.0 and its EhPs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-70_ehps.htm) →  [Changes for Release 7.0](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-70.htm) → 

ABAP Keyword Documentation in Release 7.0

In Release 7.0, the ABAP keyword documentation has been expanded as follows:

[1\. Full text search](#!ABAP_MODIFICATION_1@1@)

[2\. Subject search](#!ABAP_MODIFICATION_2@2@)

[3\. Diagrams](#!ABAP_MODIFICATION_3@3@)

[4\. Language](#!ABAP_MODIFICATION_4@4@)

[5\. List of ABAP words](#!ABAP_MODIFICATION_5@5@)

[6\. Terminology changes for narrowing and widening casts](#!ABAP_MODIFICATION_6@6@)

[7\. Adjustment of font size](#!ABAP_MODIFICATION_7@7@)

Modification 1

Full Text Search

Considerable improvements have been made to the performance of the full text search in the ABAP keyword documentation. The occurrences found by the full text search are now marked in the display. As before, the full text search can be called from the display window of the documentation. It is also available on the initial screens for the documentation (ABAP Editor, transaction ABAPHELP) as an alternative to the index search.

Modification 2

Subject Search

An alphabetical [subject directory](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_subjects.htm) has been added to the ABAP keyword documentation. The index search now evaluates this directory in addition to the [ABAP index](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_index.htm) and [ABAP glossary](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_glossary.htm).

Modification 3

Diagrams

Using access to the MIME repository, diagrams can now be displayed in the ABAP keyword documentation.

Example: [Sessions and Memory Areas](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmemory_organization.htm)

Modification 4

Language

It is now possible to select the language in which the documentation is displayed on the initial screen of the transaction ABAPHELP. The user can choose between the logon language, English, and German. The logon language is the standard setting. When the ABAP keyword documentation is called from ABAP Editor, the logon language is always used.

Modification 5

List of ABAP Words

The document [ABAP words](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_words.htm) contains a list of all names reserved in ABAP, except for those that consist of special characters. From this list, the user can navigate directly to the occurrences.

Modification 6

Terminology Change for Narrowing and Widening Casts

The use of the terms [narrowing cast](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennarrowing_cast_glosry.htm "Glossary Entry") and [widening cast](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenwidening_cast_glosry.htm "Glossary Entry"), which refers to the view that a reference variable offers to an object, has been modified to reflect more general usage, which refers to the value set covered by a variable. Now the unambiguous terms [up cast](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenup_cast_glosry.htm "Glossary Entry") and [down cast](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendown_cast_glosry.htm "Glossary Entry") are now used almost everywhere.

Modification 7

Adjustment of Font Size

If the font size is changed when adjusting the local layout in the SAP GUI, this also applies to the display of the ABAP keyword documentation. Previously, only changes in color affected the ABAP keyword documentation. Within a user session, the GUI font size dependency can be deactivated by setting the standard font size.